<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="projects">Projects</string>
    <string name="add_project">Add Project</string>
    <string name="project_title_label">Title</string>
    <string name="task_title">Enter a title</string>
    <string name="submit">Submit</string>
    <!-- String values for create-task view -->
    <string name="task_title_todo">To do</string>
    <string name="task_title_inProgress">In Progress</string>
    <string name="task_title_completed">Completed</string>
    <string name="task_create_sub_task">Create Sub-task</string>
    <string name="task_create_description_label">Description</string>
    <string name="task_create_description_hint">Enter a description</string>
    <string name="task_create_estimated_time">Estimate Time</string>
    <string name="task_create_log_time">Log Time</string>
    <string name="task_create_progress_label">Progress</string>
    <string name="task_create_due_date">Due Date</string>
    <string name="empty_list">Nothing to see here, why not try adding something?</string>
    <string name="attachments">Attachments</string>
    <string name="add_attachments">Add Attachment</string>
    <string name="log_time_hint">Log time in hours or fractions of hours</string>
    <string name="estimate_time_hint">Estimate task time in hours</string>
    <string name="update_progress_label">Update Progress</string>
    <string name="activity_label">Activity Feed</string>

    <!-- String values for create-project spinner -->
    <string-array name="priority_list">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <!-- Values for progress spinner -->
    <string-array name="progress_list">
        <item>To do</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
</resources>
