<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp">
    <EditText
        android:id="@+id/edit_task_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edit_task_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_create_log_time"
        android:layout_marginTop="16dp"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/log_time_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/log_time_hint"
        android:maxLines="1"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/logged_times_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
        </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/attachments"
        android:layout_marginTop="16dp"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/add_attachment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_attachments"/>
        <ImageView
            android:id="@+id/picture_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/attachments_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_progress_label"
        android:layout_marginTop="16dp"
        android:textSize="25sp"/>
    <Spinner
        android:id="@+id/modify_task_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/modify_task_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"/>
</LinearLayout>
    </ScrollView>