<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:fontFamily="Sans-serif light"
            android:textSize="30sp"
            android:layout_marginLeft="16dp"
            />
        <EditText android:id="@+id/task_title_edit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:maxLines="1"
                  android:hint="@string/task_title"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_create_description_label"
            android:fontFamily="Sans-serif light"
            android:textSize="30sp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/task_create_description_label"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginLeft="16dp"
            android:text="@string/task_create_estimated_time"
            android:fontFamily="Sans-serif light"
            android:textSize="30sp"/>
            <EditText
                android:id="@+id/estimate_time_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="numberDecimal"
                android:hint="@string/estimate_time_hint"
                android:maxLines="1"
                android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_create_progress_label"
            android:fontFamily="Sans-serif light"
            android:textSize="30sp"
            android:layout_marginLeft="16dp"/>
        <Spinner
            android:id="@+id/progress_select_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_create_due_date"
            android:fontFamily="Sans-serif light"
            android:textSize="30sp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:id="@+id/date_picker_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:fontFamily="Sans-serif light"
            android:textSize="30sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>