<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/list_background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title_todo"
            android:textSize="25sp"
            android:textColor="@color/label_color"
            android:textAllCaps="true"/>
        <ListView
            android:id="@+id/todo_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/alt_background_color"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/empty_list_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:gravity="center"
            android:visibility="gone"/>
        <Button
            android:id="@+id/create_subtask_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_create_sub_task"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="@color/alt_background_color"
            android:gravity="right"
            android:paddingRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title_inProgress"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textColor="@color/label_color"/>
        <ListView
            android:id="@+id/progress_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/alt_background_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title_completed"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textColor="@color/label_color"
            android:textAllCaps="true"/>
        <ListView
            android:id="@+id/completed_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/alt_background_color"/>
        <TextView
            android:id="@id/empty_list_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:gravity="center"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>